--- a/packages/andrzej-tools/PKGBUILD
+++ b/packages/andrzej-tools/PKGBUILD
@@ -6,27 +6,33 @@ arch=('any')
 license=('MIT')
 depends=('bash' 'iputils' 'msmtp' 'systemd' 'util-linux' 'iproute2' 'coreutils')
 
+backup=('etc/andrzej-tools.conf')
+
 source=(
+  "andrzej-tools.conf"
   "ping-watch"
-  "ping-watch@.service"
-  "ping-watch@.timer"
+  "ping-watch.service"
+  "ping-watch.timer"
   "boot-mail"
   "boot-mail.service"
   "auth-watch"
   "auth-watch.service"
 )
 
-sha256sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP')
+sha256sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP')
 
 package() {
+  # config
+  install -Dm644 andrzej-tools.conf "$pkgdir/etc/andrzej-tools.conf"
+
   # scripts
-  install -Dm755 ping-watch   "$pkgdir/usr/local/sbin/ping-watch"
-  install -Dm755 boot-mail    "$pkgdir/usr/local/sbin/boot-mail"
-  install -Dm755 auth-watch   "$pkgdir/usr/local/sbin/auth-watch"
+  install -Dm755 ping-watch "$pkgdir/usr/local/sbin/ping-watch"
+  install -Dm755 boot-mail  "$pkgdir/usr/local/sbin/boot-mail"
+  install -Dm755 auth-watch "$pkgdir/usr/local/sbin/auth-watch"
 
   # systemd units
-  install -Dm644 ping-watch@.service "$pkgdir/usr/lib/systemd/system/ping-watch@.service"
-  install -Dm644 ping-watch@.timer   "$pkgdir/usr/lib/systemd/system/ping-watch@.timer"
-  install -Dm644 boot-mail.service   "$pkgdir/usr/lib/systemd/system/boot-mail.service"
-  install -Dm644 auth-watch.service  "$pkgdir/usr/lib/systemd/system/auth-watch.service"
+  install -Dm644 ping-watch.service "$pkgdir/usr/lib/systemd/system/ping-watch.service"
+  install -Dm644 ping-watch.timer   "$pkgdir/usr/lib/systemd/system/ping-watch.timer"
+  install -Dm644 boot-mail.service  "$pkgdir/usr/lib/systemd/system/boot-mail.service"
+  install -Dm644 auth-watch.service "$pkgdir/usr/lib/systemd/system/auth-watch.service"
 }
