--- a/packages/andrzej-tools/ping-watch.service
+++ b/packages/andrzej-tools/ping-watch.service
@@ -5,5 +5,6 @@ After=network-online.target
 
 [Service]
 Type=oneshot
+LogLevelMax=3
 Environment=CONFIG=/etc/andrzej-tools.conf
 ExecStart=/usr/local/sbin/ping-watch
